<resources>
    <string name="app_name">Bike Exchange</string>
    <string name="home_page">HOME</string>

    <string name="imageUrl">imageUrl</string>

    <string name="messages">MESSAGES</string>
    <string name="my_shop">MY SHOP</string>
    <string name="purchase">PURCHASES</string>
    <string name="categories">CATEGORIES</string>
    <string name="bike_categories">BIKE CATEGORIES</string>
    <string name="discounts">DISCOUNTS</string>
    <string name="settings">SETTINGS</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="nav_open_drawer">Open navigation</string>
    <string name="nav_close_drawer">Close navigation</string>
    <string name="search_hint">Search item</string>
    <string name="search_button">Search</string>
    <string name="search_icon">Search</string>
    <string name="shopping_cart">SHOPPING CART</string>
    <string name="logo">Logo</string>
    <string name="close">Close</string>
    <string name="email_hint">Enter email</string>
    <string name="firstName_hint">Enter first name</string>
    <string name="secondName_hint">Enter second name</string>
    <string name="passw_hint">Enter password</string>
    <string name="forgot_passw">I forgot password</string>
    <string name="confirm_passw">Confirm password</string>
    <string name="have_not_acc">Not have an account yet?</string>
    <string name="have_acc">Already have an account?</string>
    <string name="reset_password_first_line">To reset password enter your email</string>
    <string name="reset_password_second_line">We will send a letter with further instructions</string>
    <string name="reset_passw_btn">RESET</string>
    <string name="send_reset_email_info">Successfully. Check your inbox</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personalize_please">To personalize please sign up. Have an account? Sign In.</string>
    <string name="bike_details_description">description</string>
    <string name="popular_categories">POPULAR CATEGORIES</string>
    <string name="register_activity">Register activity</string>
    <string name="top_buttons_group">Top buttons group</string>
    <string name="to_personalize">To personalize your store, please login</string>
    <string name="auth_buttons_group">Sign in buttons group</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_saved">Add to saved</string>
    <string name="go_to_shopping_cart">Shopping cart</string>
    <string name="total_cost">TOTAL COST:</string>
    <string name="amount_of_payment">AMOUNT OF PAYMENT</string>
    <string name="to_payment">TO PAYMENT</string>
    <string name="delete_from_shop_cart">delete</string>
    <string name="image_for_forgot_password_view">image for forgot password view</string>
    <string name="inbox">INBOX</string>
    <string name="outbox">OUTBOX</string>
    <string name="deleted">DELETED</string>
    <string name="checkout_header">CHECKOUT</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="go_to_the_payment">GO TO THE PAYMENT</string>
    <string name="for_payment">FOR PAYMENT:</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="credit_card_month">MONTH</string>
    <string name="credit_card_year">YEAR</string>
    <string name="credit_card_cvv">CVV</string>
    <string name="credit_card_holder_name">HOLDER NAME</string>
    <string name="close_button_my_shop">close button my shop</string>
    <string name="tracking_button">TRACKING</string>
    <string name="saved_button">SAVED</string>
    <string name="buy_again_button">BUY AGAIN</string>
    <string name="tracking">TRACKING</string>
    <string name="active_orders">ACTIVE ORDERS</string>
    <string name="completed_orders">COMPLETED ORDERS</string>
    <string name="discounted_price">DISCOUNTED PRICE:</string>
    <string name="common_price">COMMON PRICE:</string>
    <string name="bike_exchange">BikeExchange</string>
    <string name="purchases_item_price_txt_view">PRICE</string>
    <!--<string name="access_token">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</string>-->
</resources>