<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home_page" />

        <item
            android:id="@+id/messages"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/messages" />

        <item
            android:id="@+id/my_shop"
            android:icon="@drawable/ic_baseline_shop_24"
            android:title="@string/my_shop" />

        <item
            android:id="@+id/purchase"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/purchase" />

        <item
            android:id="@+id/categories"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/categories" />

        <item
            android:id="@+id/discounts"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/discounts" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>

    </group>

</menu>