<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_part_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/parent_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/top_buttons_group">

                <Button
                    android:id="@+id/categories_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetRight="2dp"
                    android:text="@string/categories"
                    app:cornerRadius="10dp"/>

                <Button
                    android:id="@+id/discount_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discounts"  />

                <Button
                    android:id="@+id/my_shop_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:text="@string/my_shop"
                    app:cornerRadius="10dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>