<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bike_details_fragment"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardElevation="6dp"
        app:cardCornerRadius="6dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/bike_details_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/imageUrl"
                />

            <TextView
                android:id="@+id/bike_details_frame_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="22sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/bike_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textAlignment="gravity"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/bike_details_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <Button
                        android:id="@+id/add_to_cart"
                        android:layout_width="160dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:text="@string/add_to_cart"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/go_to_shopping_cart"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <Button
                        android:id="@+id/go_to_shopping_cart"
                        android:layout_width="170dp"
                        android:layout_height="48dp"
                        android:text="@string/shopping_cart"
                        android:textColor="@color/teal_700"
                        app:layout_constraintStart_toEndOf="@+id/add_to_cart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/buy_now_button"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:text="@string/buy_now"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/add_to_saved_button"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:text="@string/add_to_saved"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>