<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shopping_cart_content_frame">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shop_cart_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shopping_cart_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_cart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_weight="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/shopping_cart_recView"
            />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/shopping_cart_recView"
            android:name="com.hfad.bikeexchange.ShoppingCartRecycler"
            android:layout="@layout/shopping_cart_recycler"
            android:layout_width="match_parent"
            android:layout_height="625dp"
            app:layout_constraintTop_toBottomOf="@+id/shopping_cart_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/shop_cart_lin_layout"
            />

        <LinearLayout
            android:id="@+id/shop_cart_lin_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopping_cart_recView">

            <Button
                android:id="@+id/payment_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/teal_700"
                android:text="@string/to_payment"
                app:cornerRadius="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_cost"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/amount_of_payment"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>